[FHIR-29951](https://jira.hl7.org/browse/FHIR-29951): Value set for Measure.type inconsistent with V3 value set

--- a/source/clinicalreasoning-quality-reporting.html
+++ b/source/clinicalreasoning-quality-reporting.html
@@ -58,6 +58,8 @@
 
 <p>Measures have metadata just like any other conformance or knowledge artifact in FHIR.  This includes metadata elements that are specific to measures and not needed for other knowledge artifacts.  For example metadata elements that are common across many knowledge artifacts including measures, are identifier, version and date.  Metadata elements that are specific to measures include measure scoring, rate aggregation, clinical recommendation statement and improvement notation.  For more information about each metadata element see the Measure Resource.</p>
 
+<p>Mappings from the V3 to the FHIR terminologies can be found in the <a href="https://hl7.org/fhir/uv/cqm/artifacts.html#terminology-concept-maps">Quality Measure IG</a>.</p>
+
 <a name="measure-logic"> </a>
 <h5>Measure Logic</h5>
 
