Updated description and image of diagram
https://jira.hl7.org/browse/FHIR-50445

--- a/source/device-module.html
+++ b/source/device-module.html
@@ -54,8 +54,8 @@ in order to support consistent definitions for schema and UML derived code.
 
     <a name="devicerelatedresourcesdiagram"></a>
     <h4>Device-related FHIR Resources: The Big picture</h4>
-    <p>When considering the use of FHIR for the integration of device information and services, many resources may be involved in even the simplest application.  Additionally, given the robust nature of FHIR resources, a single basic capability will have many potential solutions all using valid FHIR resource configurations.  The following diagram captures the core device-related FHIR resources and representative relationships.</p>
-    <img src="device-module-resources-big-map.png" alt="Image showing the Device-related FHIR Resources: The Big picture" />
+    <p>When considering the use of FHIR for the integration of device information and services, many resources may be involved in even the simplest application.  Additionally, given the robust nature of FHIR resources, a single basic capability will have many potential solutions all using valid FHIR resource configurations.  The following diagram captures some of the key device-related FHIR resources and representative relationships.  It is recommended that readers review the respective resources for all valid relationships.</p>
+    <img src="DeviceModule.svg" alt="Image showing the Device-related FHIR Resources: The Big picture" width=1000/>
 
     <p>Looking in to the details of each of the resources on this diagram, though, will reveal a significant amount of detail that can often lead to confusion as to the high-level purposes they are intended to address.  Only the most comprehensive applications will require integration of all the model components.  Most will require only a subset. To sort this out, the following examples are provided to help understand the key concepts and rationale for their implementation.</p>
 
