FHIR-50678 Administration Module & Devices

--- a/source/administration-module.html
+++ b/source/administration-module.html
@@ -221,7 +221,8 @@ in order to support consistent definitions for schema and UML derived code.
         <a name="dev-sub"></a>
         <h4>Devices and Substances</h4>
         <p>
-            Other assets are often registered in the administration system, and maintained as master files.
+            Other assets are often registered in the administration system, and maintained as master files.<br/>
+            Refer to the <a href="device-module.html">device module</a> for additional details.
         </p>
         <table class="bare">
             <tr><td><b>Name</b></td><td><b>Aliases</b></td><td><b>Description</b></td></tr>
