Fix missing HTML tag

--- a/source/rdf.html
+++ b/source/rdf.html
@@ -337,7 +337,7 @@ href="fhir.shex">fhir.shex</a>
           <p> Elements that can repeat are represented with <a href="https://www.w3.org/TR/turtle/#collections">RDF lists</a>
             (officially called "RDF collections") in order to retain the
             order of their elements.  For example this
-            <code>fhir:coding</code> property holds a list of two members: /p>
+            <code>fhir:coding</code> property holds a list of two members: </p>
           <pre class="rdf">    fhir:coding <b>(</b>
       [ a &lt;http://loinc.org/rdf/29463-7&gt; … ]
       [ a &lt;http://loinc.org/rdf/3141-9&gt; … ]
