[FHIR-50526](https://jira.hl7.org/browse/FHIR-50256): Fixed typo

--- a/source/clinicalreasoning-quality-reporting.html
+++ b/source/clinicalreasoning-quality-reporting.html
@@ -135,7 +135,7 @@
 <a name="stratification-and-supplemental-data"> </a>
 <h5>Stratification and Supplemental Data</h5>
 
-<p>Supplemental data are descriptive in nature and do not represent an evidence-based quality opportunity, rather thay may provide useful additional contextual information about a measure population, or support quality program requirements such as Helth IT certifiaction. Strata are an integral component of the core measure specification. Each evidence-based stratum represents significant clinical or policy rationale for subdividing the measure population.</p>
+<p>Supplemental data are descriptive in nature and do not represent an evidence-based quality opportunity, rather they may provide useful additional contextual information about a measure population, or support quality program requirements such as Helth IT certifiaction. Strata are an integral component of the core measure specification. Each evidence-based stratum represents significant clinical or policy rationale for subdividing the measure population.</p>
 
 <a name="stratification"> </a>
 <h6>Measure Stratification</h6>
