--- a/source/datatypes.html
+++ b/source/datatypes.html
@@ -1269,6 +1269,11 @@ since they always have the meaning as defined above. There is no escape sequence
 contain spaces. Also, to make parsing simpler, codes cannot start with numerals.
 </p>
 
+<div class="use">
+<p><b>Constraints</b></p>
+[%dt.constraints SampledData%]
+</div>
+
 <p>
 SampledData is used in the following places: [%dtusage SampledData%]
 </p>
