--- a/source/obligations.html
+++ b/source/obligations.html
@@ -69,6 +69,15 @@ so no elements are flagged as <code>mustSupport</code>=true as part of the base 
 no obligations are defined for any elements (except for an example profile).
 </p>
 
+<p>
+When a repeating element is labelled as 'must-support', it can be ambiguous whether the intent
+is that at least one of the repeating elements must be supported, or whether every element must be
+supported. The must support documentation SHOULD explicitly discuss this issue, and make the
+expectations in such cases clear to the implementers. In the absence of such documentation,
+implementer cannot be sure what the meaning of the specification is, though the community may
+issue new advice to clarify the meaning.
+</p>
+
 <a name="obligations"></a>
 <h3>Obligations</h3>
 
