--- a/source/profiling.html
+++ b/source/profiling.html
@@ -1114,6 +1114,10 @@ the new IG or profile to simply reference the mustSupport artifacts defined in a
 behavior desired.
 </p>
 <p>
+When a child element is defined as Must Support and the parent element isn't, a system must support the child if
+it supports the parent, but there's no expectation that the system must support the parent.  
+</p>
+<p>
 Note that an element that has the property IsModifier is not necessarily a "key" element (e.g. one of
 the important elements to make use of the resource), nor is it automatically mustSupport - however both
 of these things are more likely to be true for IsModifier elements than for other elements.
