--- a/source/datatypes.html
+++ b/source/datatypes.html
@@ -825,7 +825,7 @@ though one provides more context than the other.
 </p>
 <p>
 Note that when granularities are significantly different, interpretation of the meaning for each of the codes will
-result in differences that may not be safe. For instance, a prescription for "APO Amoxicillin 250 mg capsule"
+result in differences that might not be safe. For instance, a prescription for "APO Amoxicillin 250 mg capsule"
 (needed to fill the order) could safely also have an additional coding of "Broad-spectrum Penicillin" (perhaps
 needed to trigger antibiotic monitoring protocols). On the other hand, if there were an order that said
 "Do not administer APO Amoxicillin 250 mg capsule", adding a translation of "broad-spectrum Penicillin"
